--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "scripts": {
-    "deploy": "npm run build && surge ./public --domain tic-tac-toe.caro.surge.sh",
+    "deploy": "npm run build && surge ./public --domain tic-tac-toe.carodelafuente.surge.sh",
     "start": "webpack-dev-server",
     "build": "rm -rf public && NODE_ENV=production webpack --optimize-minimize --progress --profile --colors"
   },
